# multi_camera_cooperation

./: CMakeLists.txt  README.md  package.xml
data/: cam_pos1.txt  cam_pos2.txt  cam_pos3.txt
include/multi_camera_cooperation/: landmark_extraction_node_ros.h  math_tools.h  pnp_cooperation_node_ros.h  pnp_target_node_ros.h
include/multi_camera_cooperation/Filter/: extend_kalman.hpp  kalman_filter.hpp  kalman_interface.hpp  lowpass_filter.hpp
launch/: base2servogp_broadcaster.launch  camA_pnp_target_node_ros_test.launch  camB_pnp_target_node_ros_test.launch  camC_pnp_target_node_ros_test.launch  camD_pnp_target_node_ros_test.launch  multi_cam_cooperation.launch
msg/: landmark.msg
src/: base2servogp_broadcaster.cpp  cam_pos.cpp  landmark_extraction_node_ros.cpp  math_tools.cpp  multi_cam_cooperation.cpp  pnp_cooperation_node_ros.cpp  pnp_target_node_ros.cpp  single_cam_process.cpp
src/Filter/: extend_kalman.cpp  kalman_filter.cpp  lowpass_filter.cpp
